| Bug #43853 | Detected GCP stop is just a INFO but should be a WARNING at least | ||
|---|---|---|---|
| Submitted: | 25 Mar 2009 8:40 | Modified: | 24 Jun 2009 9:46 |
| Reporter: | Oli Sennhauser | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | jack andrews | CPU Architecture: | Any |
[25 Mar 2009 8:40]
Oli Sennhauser
[29 Apr 2009 10:00]
jack andrews
hi mganus, how's this patch?
$ quilt diff
Index: 70/storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp
===================================================================
--- 70.orig/storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp 2009-04-29 19:59
:00.026000000 +1000
+++ 70/storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp 2009-04-29 19:59
:04.463000000 +1000
@@ -13192,7 +13192,7 @@
signal->theData[0] = 2305;
sendSignal(rg, GSN_DUMP_STATE_ORD, signal, 1, JBB);
- infoEvent("Detected GCP stop(%d)...sending kill to %s",
+ warningEvent("Detected GCP stop(%d)...sending kill to %s",
m_gcp_save.m_master.m_state, c_GCP_SAVEREQ_Counter.getText());
ndbout_c("Detected GCP stop(%d)...sending kill to %s",
m_gcp_save.m_master.m_state, c_GCP_SAVEREQ_Counter.getText());
@@ -13204,7 +13204,7 @@
/**
* We're waiting for a COPY_GCICONF
*/
- infoEvent("Detected GCP stop(%d)...sending kill to %s",
+ warningEvent("Detected GCP stop(%d)...sending kill to %s",
m_gcp_save.m_master.m_state, c_COPY_GCIREQ_Counter.getText());
ndbout_c("Detected GCP stop(%d)...sending kill to %s",
m_gcp_save.m_master.m_state, c_COPY_GCIREQ_Counter.getText());
@@ -13254,7 +13254,7 @@
/**
* We're waiting for a GCP PREPARE CONF
*/
- infoEvent("Detected GCP stop(%d)...sending kill to %s",
+ warningEvent("Detected GCP stop(%d)...sending kill to %s",
m_micro_gcp.m_state, c_GCP_PREPARE_Counter.getText());
ndbout_c("Detected GCP stop(%d)...sending kill to %s",
m_micro_gcp.m_state, c_GCP_PREPARE_Counter.getText());
@@ -13281,7 +13281,7 @@
}
case MicroGcp::M_GCP_COMMIT:
{
- infoEvent("Detected GCP stop(%d)...sending kill to %s",
+ warningEvent("Detected GCP stop(%d)...sending kill to %s",
m_micro_gcp.m_state, c_GCP_COMMIT_Counter.getText());
ndbout_c("Detected GCP stop(%d)...sending kill to %s",
m_micro_gcp.m_state, c_GCP_COMMIT_Counter.getText());
[29 Apr 2009 11:50]
Magnus BlÄudd
That should solve the problem.
[12 Jun 2009 10:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/76172 2937 jack andrews 2009-06-12 Bug #43853 Detected GCP stop is just a INFO but should be a WARNING at least . just changed infoEvent to warningEvent in 4 places
[15 Jun 2009 9:51]
Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jack@asus-20090615083619-6n3n3a98gtd1xjx9) (version source revid:jack@sun.com-20090612102517-0255ptalu54yrer7) (merge vers: 5.1.34-ndb-7.0.7) (pib:6)
[24 Jun 2009 9:46]
Jon Stephens
Documented bugfix in the NDB-7.0.7 changelog as follows:
Previously, a GCP STOP event was written to the cluster log as
an INFO event. Now it is logged as a WARNING event instead.
