Bug #43853  	Detected GCP stop is just a INFO but should be a WARNING at least   . just changed infoEvent to warningEvent in 4 places